[package]
name = "lru-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
# This crate has no production dependencies.

[dev-dependencies]
# Dependencies used specifically for benchmarks and performance comparisons
dashmap = "6.1.0"
lru = "0.16.3"
moka = { version = "0.12.12", features = ["sync"] }
parking_lot = "0.12"

